--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,14 +6,14 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>320</width>
-    <height>240</height>
+    <width>420</width>
+    <height>260</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>320</width>
-    <height>240</height>
+    <width>420</width>
+    <height>260</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -24,14 +24,7 @@
     <item row="5" column="0">
      <widget class="QLabel" name="lbl_status">
       <property name="text">
-       <string>Status </string>
-      </property>
-     </widget>
-    </item>
-    <item row="3" column="1">
-     <widget class="QPushButton" name="btn_select_video">
-      <property name="text">
-       <string>Select Video</string>
+       <string>Status: Idle</string>
       </property>
      </widget>
     </item>
@@ -45,28 +38,28 @@
     <item row="0" column="0" colspan="2">
      <widget class="QPushButton" name="btn_load_module">
       <property name="text">
-       <string>Start v4l2loopback module</string>
+       <string>Load v4l2loopback module</string>
       </property>
      </widget>
     </item>
     <item row="1" column="0" colspan="2" alignment="Qt::AlignmentFlag::AlignHCenter">
      <widget class="QLabel" name="label_2">
       <property name="text">
-       <string>Press Button to Select Image or Video file</string>
+       <string>Choose a media file to stream to /dev/video10</string>
       </property>
      </widget>
     </item>
     <item row="4" column="0" colspan="2">
      <widget class="QLabel" name="lbl_file">
       <property name="text">
-       <string>Selected file : None</string>
+       <string>Selected file: None</string>
       </property>
      </widget>
     </item>
-    <item row="3" column="0">
-     <widget class="QPushButton" name="btn_select_image">
+    <item row="3" column="0" colspan="2">
+     <widget class="QPushButton" name="btn_select_file">
       <property name="text">
-       <string>Select Image</string>
+       <string>Choose Image / Video</string>
       </property>
      </widget>
     </item>
@@ -77,7 +70,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>320</width>
+     <width>420</width>
      <height>21</height>
     </rect>
    </property>
